--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -30,7 +30,7 @@ Also suggests modifications to be made in the features. Also in charge of Logic 
 
 === Chen Xiaoman
 image::chenxiaoman.png[width="150", align="left"]
-{empty}[https://github.com/ChenXiaoman[github]][<<ChenXiaoman#, portfolio>>]
+{empty}[https://github.com/ChenXiaoman[github]][https://cs2103aug2017-w13-b2.github.io/main/team/ChenXiaoman.html[portfolio]]
 
 Role: Scheduling and Tracking +
 Responsibilities: Ensure that all deadlines and Deliverables are met on time.
