--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -359,6 +359,7 @@ index 1 in the address book.
 image::MockUp.png[width="790"]
 
 e.g. `Photo 1 delete`. +
+
 ** Result - Picture is deleted from the person at index at 1. +
 
 image::delete.png[width="790"]
@@ -450,7 +451,7 @@ image::fs.png[width="790"]
 // tag::facebook[]
 === FaceBook Integration since v1.3
 
-This feature helps you view the profile page of a person in your contact list. This way we can know more about our friends +
+This feature helps you view the profile page of a person in your contact list. This way we can know more about your friends +
 and colleagues. +
 
 Below are listed some conditions for the command. +
@@ -468,7 +469,7 @@ e.g. - `facebook 1` +
 
 image::facebook.png[width="790"]
 
-** If the person does not have a facebook account or the username is not entered in Weaver,you will be notified.
+** If the person does not have a facebook account or the username is not entered in Weaver, you will be notified.
 
 e.g. - `facebook 2`
 ** Result ** - You will see a prompt telling you that the person has no username. +
@@ -580,9 +581,9 @@ image::theme.png[width="840"]
 // tag::reminder[]
 === Reminders Panel since v1.4 +
 
-Have you ever felt the need to be constantly reminded of your daily assignments. Fret not!Weaver helps you keep up to
-date with your daily school assignments.Just add your reminders using a single command and weaver will display your
-reminders with an image depicting the priority level of that assignment and the due date.That way, you can keep scrolling through your
+Have you ever felt the need to be constantly reminded of your daily assignments. Fret not! Weaver helps you keep up to
+date with your daily school assignments. Just add your reminders using a single command and weaver will display your
+remindersdepicting the priority level of that assignment and the due date.That way, you can keep scrolling through your
 reminders panel when you open the application and be aware of the upcoming tasks.
 
 
@@ -608,7 +609,8 @@ image::remove.png[width="840"]
 
 
 ** Change an existing reminder. +
-Command Format - `Change d/22.12.2017` +
+Command Format - `Change [INDEX] field to be changed` +
+e.g. `change 1 d/22.12.2017` +
 The above command will change the due date of the reminder to the new date. +
 
 ** `Result` +
@@ -691,13 +693,13 @@ e.g. `email t/friends s/birthday party`
 ** Result ** +
 Email is sent!
 
-image::email.png[width="237"]
+image::emailsent.png[width="237"]
 
 e.g. `email t/friends t/colleagues s/subject`
 ** Result ** +
 Multiple tags cannot be entered +
 
-image::emailMultiple.png[width="237"]
+image::error.png[width="237"]
 
 // end::email[]
 === Exiting the program : `exit`
