--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -947,7 +947,8 @@ loadPage(url);
     }
 ---
 
-image::FaceBookSequence.png[width="800"]
+image::FaceBookSequence.png[width="800"] +
+
 Figure 3.1
 
 ** Refer to figure 3.1 above which shows the sequence diagram of the Facebook command. +
